[package]
name = "learn_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "closure"
path = "Iterator&Closure/closure.rs"
[[bin]]
name = "iterator"
path = "Iterator&Closure/iterator.rs"

[[bin]]
name = "box"
path = "SmartPointer/box.rs"
[[bin]]
name = "drop"
path = "SmartPointer/drop.rs"
[[bin]]
name = "rc"
path = "SmartPointer/rc.rs"
[[bin]]
name = "ref_cell"
path = "SmartPointer/ref_cell.rs"
[[bin]]
name = "circular_ref"
path = "SmartPointer/circular_ref.rs"
[[bin]]
name = "weak_count_tree"
path = "SmartPointer/weak_count_tree.rs"

[[bin]]
name = "simple_thread"
path = "Pararel/simple_thread.rs"
[[bin]]
name = "channel"
path = "Pararel/channel.rs"
[[bin]]
name = "mutex"
path = "Pararel/mutex.rs"

[[bin]]
name = "trait"
path = "ObjectOrientedPrograming/trait.rs"
[[bin]]
name = "state_pattern"
path = "ObjectOrientedPrograming/state_pattern.rs"
[[bin]]
name = "state_as_type"
path = "ObjectOrientedPrograming/state_as_type.rs"

[[bin]]
name = "unsafe"
path = "advanced_features/unsafe.rs"
[[bin]]
name = "advanced_trait"
path = "advanced_features/advanced_trait.rs"
[[bin]]
name = "advanced_type"
path = "advanced_features/advanced_type.rs"